# src/router/collectionRouter.js
@@ -1,5 +1,7 @@
 import { Router } from 'express'
 import { getCollection, createCollection, getMyCollections, editCollection, deleteCollection, searchPublicCollections } from '../controllers/collectionController.js';
+import { createCard, getCardsCollection, getCardsToTrain } from '../controllers/cardController.js';
+import { createCardSchema } from '../models/card.js';
 import { validateBody, validateParams, validateQuery } from '../middleware/validation.js';
 import { createCollectionSchema, collectionIdSchema, searhCollectionSchema } from '../models/collection.js';
 import { authenticateToken } from '../middleware/authenticateToken.js'
@@ -20,5 +22,11 @@ router.post('/', validateBody(createCollectionSchema), createCollection);
 router.put('/:collId', validateBody(createCollectionSchema), validateParams(collectionIdSchema), editCollection);
 
 router.delete('/:collId', validateParams(collectionIdSchema), deleteCollection)
+
+router.post('/:collId/cards', validateParams(collectionIdSchema), validateBody(createCardSchema), createCard);
+
+router.get('/:collId/cards', validateParams(collectionIdSchema), getCardsCollection);
+
+router.get('/:collId/cards/due', validateParams(collectionIdSchema), getCardsToTrain);
 
 export default router;
